fix Test #193